--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=1920 height=1080></canvas>
+      <canvas id="unity-canvas" width=960 height=600></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -27,15 +27,15 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/unity.loader.js";
+      var loaderUrl = buildUrl + "/web_build_rollball.loader.js";
       var config = {
-        dataUrl: buildUrl + "/unity.data",
-        frameworkUrl: buildUrl + "/unity.framework.js",
-        codeUrl: buildUrl + "/unity.wasm",
+        dataUrl: buildUrl + "/web_build_rollball.data",
+        frameworkUrl: buildUrl + "/web_build_rollball.framework.js",
+        codeUrl: buildUrl + "/web_build_rollball.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "rollaball",
-        productVersion: "1.1",
+        productVersion: "0.1",
       };
 
       var container = document.querySelector("#unity-container");
@@ -62,8 +62,8 @@
           mobileWarning.style.display = "none";
         }, 5000);
       } else {
-        canvas.style.width = "1920px";
-        canvas.style.height = "1080px";
+        canvas.style.width = "960px";
+        canvas.style.height = "600px";
       }
       loadingBar.style.display = "block";
 
