--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="unity-container" style="width=100% height=100%">
-      <canvas id="unity-canvas" width=auto height=auto></canvas>
+      <canvas id="unity-canvas" width=auto height=auto"></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
