--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div id="unity-container" style="width=100% height=100%">
-      <canvas id="unity-canvas" width=auto height=auto></canvas>
-      <div id="unity-loading-bar">
+      <canvas id="unity-canvas" width=100% height=100%></canvas>
+      <div id="unity-loading-bar" style="width=100% height=100%">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
           <div id="unity-progress-bar-full"></div>
